# nudge

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go
extension/: bun.lockb  package.json
extension/src/: extension.ts
internal/: diff.go  merge.go  nudge.go  revision.go  revisions.go  sit.go
internal/find/: find.go
internal/warning/: format.go  print.go  warning.go
src/: macros.rs  main.rs
