[package]
name = "nudge"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0"
walkdir = "2.3"
regex = "1.7"
lazy-regex = "2.3"
tree-sitter = "0.20"
tree-sitter-swift = "0.3"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.19"
