[package]
name = "nudge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Spot when implementations change, but docs don't."
homepage = "https://github.com/Crummjyz/nudge#readme"
documentation = "https://github.com/Crummjyz/nudge#readme"
repository = "https://github.com/Crummjyz/nudge"
readme = "README.md"

[dependencies]
clap = "4.0"
walkdir = "2.3"
rayon = "1.6"
lazy-regex = "2.3"
tree-sitter = "0.20"
tree-sitter-swift = "0.3"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.19"
